--- a/templates/tools.html
+++ b/templates/tools.html
@@ -208,10 +208,14 @@
 
         .comment-input {
             width: 100%;
-            padding: 8px;
+            padding: 10px;
             border: 1px solid #ddd;
             border-radius: 5px;
             font-size: 0.9rem;
+            min-height: 75px;
+            resize: vertical;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+            line-height: 1.5;
         }
 
         .comment-input:invalid {
@@ -678,11 +682,13 @@
                                             onclick="setScore('${indicator.id}', ${score}, ${indicator.max_score})">${score}</button>`
                                 ).join('')}
                             </div>
-                            <input type="text" class="comment-input" 
+                            <textarea class="comment-input" 
                                    id="comment-${indicator.id}" 
                                    placeholder="Comments (required) *"
                                    required
-                                   onchange="setComment('${indicator.id}', this.value)">
+                                   rows="3"
+                                   onchange="setComment('${indicator.id}', this.value)"
+                                   oninput="setComment('${indicator.id}', this.value)"></textarea>
                         </div>
                     `;
                 });
